[gd_scene load_steps=8 format=3 uid="uid://d1xm153u25fhg"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_fhisf"]
[ext_resource type="PackedScene" uid="uid://06aythuam5ew" path="res://scenes/allTilesets.tscn" id="2_rbfg6"]
[ext_resource type="PackedScene" uid="uid://b245mtj6y8ovs" path="res://scenes/player.tscn" id="4_cvovx"]
[ext_resource type="PackedScene" uid="uid://dxj2rbd5xcurv" path="res://scenes/slime.tscn" id="5_1cij5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pivdk"]
size = Vector2(22, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywa8"]
size = Vector2(71, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_21w0t"]
size = Vector2(35.5, 73)

[node name="world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fhisf")
metadata/_edit_horizontal_guides_ = []

[node name="TileMap" parent="." instance=ExtResource("2_rbfg6")]
layer_1/tile_data = PackedInt32Array(1703965, 131076, 0, 1572888, 65540, 0, 1638424, 196612, 0, 1703972, 131076, 0, 1638440, 196612, 0, 1441832, 196612, 0, 1900584, 131076, 0, 1703982, 4, 0, 1835055, 196612, 0, 2031659, 131076, 0, 3145765, 4, 0, 2883608, 196612, 0, 2621464, 65540, 0, 2555934, 196612, 0, 2687005, 196612, 0, 3080235, 196612, 0, 2818092, 4, 0, 2818091, 65540, 0, 2949169, 131076, 0, 3014707, 196612, 0, 2490431, 196612, 0, 2424890, 131076, 0, 2293823, 4, 0, 1900605, 196612, 0, 1638459, 4, 0, 1638453, 196612, 0, 2949189, 65540, 0, 3211320, 65540, 0, 3211321, 65540, 0, 4063287, 131076, 0, 4325433, 4, 0, 4259894, 196612, 0, 4259901, 65540, 4, 3801151, 4, 4, 4784191, 65540, 4, 3342398, 65540, 4, 3145793, 65540, 4, 3211335, 131076, 4, 3276875, 65540, 4, 3211342, 4, 4, 3276886, 4, 4, 3276887, 65540, 4, 3211354, 196612, 4, 3276892, 4, 4, 3342429, 131076, 4, 3211358, 196612, 4, 2883640, 131076, 4, 2555956, 196612, 4, 2359345, 65540, 4, 2162738, 4, 4, 2162740, 4, 4, 1900600, 4, 4, 2228256, 196612, 4, 2228257, 196612, 4, 2359332, 4, 4, 2424873, 131076, 4, 2097191, 65540, 4, 2031633, 131076, 4, 2031632, 196612, 4, 2031622, 65540, 4, 2031624, 65540, 4, 2097160, 65540, 4, 1966081, 65540, 4, 2097175, 131076, 4, 2162712, 131076, 4, 1966109, 196612, 4, 2097186, 196612, 4)

[node name="player" parent="." instance=ExtResource("4_cvovx")]
position = Vector2(432, 404)

[node name="slime" parent="." instance=ExtResource("5_1cij5")]
position = Vector2(458, 741)

[node name="slime2" parent="." instance=ExtResource("5_1cij5")]
position = Vector2(901, 1029)

[node name="slime3" parent="." instance=ExtResource("5_1cij5")]
position = Vector2(941, 453)

[node name="slime4" parent="." instance=ExtResource("5_1cij5")]
position = Vector2(662, 640)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(0, 0, 1536, 0, 1534, 763, 1572, 763, 1572, 839, 1533, 839, 1533, 1243, 1046, 1245, 1046, 1288, 970, 1288, 970, 1247, 1, 1247, 1, 535, -27, 535, -27, 475, 1, 475, 0, 1, -8, -6, -112, -8, -111, 97, -121, 1343, 1625, 1329, 1625, -55, -20, -59, -12, -10, -8.95515, -7.46263)

[node name="world_to_glade_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_to_glade_transition"]
position = Vector2(-12, 504.5)
shape = SubResource("RectangleShape2D_pivdk")

[node name="world_to_nook_transition" type="Area2D" parent="."]
position = Vector2(993, 1260)

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_to_nook_transition"]
position = Vector2(15.5, 6.5)
shape = SubResource("RectangleShape2D_iywa8")

[node name="world_to_farm_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="world_to_farm_transition"]
position = Vector2(1552.75, 801.5)
shape = SubResource("RectangleShape2D_21w0t")

[connection signal="body_entered" from="world_to_glade_transition" to="." method="_on_world_to_glade_transition_body_entered"]
[connection signal="body_exited" from="world_to_glade_transition" to="." method="_on_world_to_glade_transition_body_exited"]
[connection signal="body_entered" from="world_to_nook_transition" to="." method="_on_world_to_nook_transition_body_entered"]
[connection signal="body_exited" from="world_to_nook_transition" to="." method="_on_world_to_nook_transition_body_exited"]
[connection signal="body_entered" from="world_to_farm_transition" to="." method="_on_world_to_farm_transition_body_entered"]
[connection signal="body_exited" from="world_to_farm_transition" to="." method="_on_world_to_farm_transition_body_exited"]
